kubernetes/apps/network/envoy-gateway/app/referencegrant.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: cert-manager-to-network
  namespace: cert-manager
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: network
  to:
    - group: ""
      kind: Secret
