kubernetes/apps/network/envoy-gateway/app/securitypolicy.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: crowdsec-bouncer
  namespace: network
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: Gateway
    name: envoy-external
  extAuth:
    grpc:
      backendRefs:
        - group: ""
          kind: Service
          name: crowdsec-envoy-bouncer
          port: 8080
          namespace: security
